--- a/BrewingApp/Views/PivotHops.xaml
+++ b/BrewingApp/Views/PivotHops.xaml
@@ -81,24 +81,39 @@
             				Orientation="Vertical"
             				Grid.Column="0">
 
-                            <TextBlock Text="Batch Volume" FontSize="{StaticResource PhoneFontSizeNormal}" FontFamily="{StaticResource PhoneFontFamilyNormal}" VerticalAlignment="Top" LineHeight="31" LineStackingStrategy="BlockLineHeight" Foreground="{StaticResource PhoneSubtleBrush}" TextWrapping="Wrap" Margin="12,0,12,-5"/>
+                            <TextBlock 
+                                Text="{Binding ., Converter={StaticResource UnitExtension}, ConverterParameter='Volume', StringFormat='Batch Volume ({0})'}" 
+                                FontSize="{StaticResource PhoneFontSizeNormal}" 
+                                FontFamily="{StaticResource PhoneFontFamilyNormal}" 
+                                VerticalAlignment="Top" 
+                                LineHeight="31" 
+                                Foreground="{StaticResource PhoneSubtleBrush}" 
+                               Margin="12,0,12,-5"/>
                             <TextBox 
             					HorizontalAlignment="Stretch" 
-            					x:Name="txtBitternessVolumne" 
             					Text="{Binding BatchVolume, Mode=TwoWay}" 
-            					InputScope="NumberFullWidth" Margin="0,6,0,2"/>
+            					InputScope="NumberFullWidth" 
+                                Margin="0,6,0,2"/>
                             </StackPanel>
 
                             <StackPanel 
             				Orientation="Vertical"
             				Grid.Column="1">
 
-                            <TextBlock Text="Specific Gravity" FontSize="{StaticResource PhoneFontSizeNormal}" FontFamily="{StaticResource PhoneFontFamilyNormal}" VerticalAlignment="Top" LineHeight="31" LineStackingStrategy="BlockLineHeight" Foreground="{StaticResource PhoneSubtleBrush}" TextWrapping="Wrap" Margin="12,0,12,-5"/>
+                            <TextBlock 
+                                Text="Specific Gravity" 
+                                FontSize="{StaticResource PhoneFontSizeNormal}" 
+                                FontFamily="{StaticResource PhoneFontFamilyNormal}" 
+                                VerticalAlignment="Top" 
+                                LineHeight="31" 
+                                Foreground="{StaticResource PhoneSubtleBrush}" 
+                                Margin="12,0,12,-5"/>
                             <TextBox 
             					HorizontalAlignment="Stretch" 
-            					x:Name="txtBitternessGravity" 
-            					Text="{Binding SpecificGravity, Mode=TwoWay, StringFormat=' {0:f3}'}" 
-            					InputScope="NumberFullWidth" Margin="0,6,0,2"/>
+            					x:Name="txtBitternessGravity"            					
+                                Text="{Binding SpecificGravity, Mode=TwoWay, StringFormat=' {0:f3}'}" 
+            					InputScope="NumberFullWidth" 
+                                Margin="0,6,0,2"/>
                             </StackPanel>
 
                             <TextBlock 
@@ -153,7 +168,7 @@
                                             Grid.Column="0" >
 
                                             <TextBlock
-                                                Text="{Binding Amount, StringFormat=' {0,2:f3}'}" 
+                                                Text="{Binding Amount, StringFormat=' {0,2:f2}'}" 
                                                 Margin="10,0,5,0"/>
                                             <TextBlock
                                                 Text="{Binding ., Converter={StaticResource UnitExtension}, ConverterParameter='Weight'}"/>
@@ -296,7 +311,7 @@
                             <StackPanel
                             Grid.Column="1">
                                 <TextBlock 
-                                    Text="Amount"
+                                    Text="{Binding ., Converter={StaticResource UnitExtension}, ConverterParameter='Weight', StringFormat='Amount ({0})'}" 
                                     Padding="0,10,0,0" 
                                     Style="{StaticResource PhoneTextSubtleStyle}" />
 
