--- a/BrewingApp/Views/PivotHops.xaml
+++ b/BrewingApp/Views/PivotHops.xaml
@@ -47,8 +47,10 @@
                 <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
                 <Setter Property="HorizontalAlignment" Value="Stretch"/>
             </Style>
+            
             <local:UnitExtensionConverter x:Key="UnitExtension"/>
-            <local:VolumeConverter x:Key="sdf"/>
+            <local:VolumeConverter x:Key="VolumeConverter"/>
+            <local:WeightConverter x:Key="WeightConverter"/>
         </Grid.Resources>
         
         <!--Pivot Control-->
@@ -72,8 +74,8 @@
                         <!-- VOLUMNE / SG -->
                         <Grid >
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="1*"/>
-                                <ColumnDefinition Width="1*"/>
+                                <ColumnDefinition Width="1.2*"/>
+                                <ColumnDefinition Width="1.2*"/>
                                 <ColumnDefinition Width="0.7*"/>
                             </Grid.ColumnDefinitions>
 
@@ -88,10 +90,10 @@
                                 VerticalAlignment="Top" 
                                 LineHeight="31" 
                                 Foreground="{StaticResource PhoneSubtleBrush}" 
-                               Margin="12,0,12,-5"/>
+                                Margin="12,0,5,-5"/>
                             <TextBox 
             					HorizontalAlignment="Stretch" 
-            					Text="{Binding BatchVolume, Mode=TwoWay}" 
+            					Text="{Binding BatchVolume, Mode=TwoWay, Converter={StaticResource VolumeConverter}}" 
             					InputScope="NumberFullWidth" 
                                 Margin="0,6,0,2"/>
                             </StackPanel>
@@ -126,13 +128,13 @@
                         </Grid>
 
                         <Rectangle
-                        Grid.Row="1"
-                        HorizontalAlignment="Stretch"
-                        VerticalAlignment="Top"
-                        Height="1" 
-                        Stroke="Red" 
-                        StrokeThickness="1" 
-                        Margin="0,0,0,15">
+                            Grid.Row="1"
+                            HorizontalAlignment="Stretch"
+                            VerticalAlignment="Top"
+                            Height="1" 
+                            Stroke="Red" 
+                            StrokeThickness="1" 
+                            Margin="0,0,0,15">
                         </Rectangle>
 
                         <!-- LISTBOX WITH HOPS-->
@@ -168,7 +170,7 @@
                                             Grid.Column="0" >
 
                                             <TextBlock
-                                                Text="{Binding Amount, StringFormat=' {0,2:f2}'}" 
+                                                Text="{Binding Amount, Converter={StaticResource WeightConverter}, StringFormat=' {0,2:f2}'}" 
                                                 Margin="10,0,5,0"/>
                                             <TextBlock
                                                 Text="{Binding ., Converter={StaticResource UnitExtension}, ConverterParameter='Weight'}"/>
