--- a/BrewingApp/Views/PivotMalts.xaml
+++ b/BrewingApp/Views/PivotMalts.xaml
@@ -139,15 +139,8 @@
                                         VerticalAlignment="Bottom"/>
 
                                         <Grid>
-                                            <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="*"/>
-                                                <ColumnDefinition Width="Auto"/>
-                                                <ColumnDefinition Width="*"/>
-                                            </Grid.ColumnDefinitions>
-
                                             <StackPanel 
-                                            Orientation="Horizontal" 
-                                            Grid.Column="0" >
+                                            Orientation="Horizontal" >
 
                                                 <TextBlock
                                                     Text="{Binding Amount, Converter={StaticResource WeightConverter},StringFormat=' {0:f2}'}" 
@@ -155,14 +148,6 @@
                                                 <TextBlock
                                                     Text="{Binding ., Converter={StaticResource UnitExtension}, ConverterParameter='Weight'}"/>
                                             </StackPanel>
-
-                                            <TextBlock
-                                            Grid.Column="1"
-                                            Text="∣"/>
-                                            <TextBlock
-                                            Text="{Binding Lovibond, StringFormat=' {0}°L'}"
-                                            Grid.Column="2"
-                                            HorizontalAlignment="Center"/>
                                         </Grid>
 
                                         <toolkit:ContextMenuService.ContextMenu>
