--- a/BrewingApp/Views/PivotBrewHouse.xaml
+++ b/BrewingApp/Views/PivotBrewHouse.xaml
@@ -17,7 +17,16 @@
     shell:SystemTray.IsVisible="True">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="Transparent">
+    <Grid x:Name="LayoutRoot">
+        <Grid.Background>
+            <ImageBrush 
+                ImageSource="/BrewingApp;component/Images/icon_flask_big.png" 
+                AlignmentX="Right" 
+                AlignmentY="Bottom" 
+                Stretch="None" 
+                Opacity="0.5" />
+        </Grid.Background>
+        
         <!--Pivot Control-->
         <controls:Pivot Title="Brew House">
             <!--Pivot item one-->
