--- a/BrewingApp/Views/PivotHops.xaml
+++ b/BrewingApp/Views/PivotHops.xaml
@@ -167,32 +167,38 @@
 
                                         <StackPanel 
                                             Orientation="Horizontal" 
-                                            Grid.Column="0" >
+                                            Grid.Column="0">
 
                                             <TextBlock
                                                 Text="{Binding Amount, Converter={StaticResource WeightConverter}, StringFormat=' {0,2:f2}'}" 
-                                                Margin="10,0,5,0"/>
+                                                Margin="10,0,5,0"
+                                                Style="{StaticResource PhoneTextSubtleStyle}"/>
                                             <TextBlock
-                                                Text="{Binding ., Converter={StaticResource UnitExtension}, ConverterParameter='Weight'}"/>
+                                                Text="{Binding ., Converter={StaticResource UnitExtension}, ConverterParameter='Weight'}"
+                                                Style="{StaticResource PhoneTextSubtleStyle}"/>
                                         </StackPanel>
 
                                         <TextBlock
                                             Grid.Column="1"
                                             Margin="5,0,0,0"
-                                            Text="∣"/>
+                                            Text="∣"
+                                            Style="{StaticResource PhoneTextSubtleStyle}"/>
                                         <TextBlock
                                             Text="{Binding AlphaAcid, StringFormat=' {0:f1}%'}"
                                             Grid.Column="2"
-                                            Margin="5,0,0,0"/>
+                                            Margin="5,0,0,0"
+                                            Style="{StaticResource PhoneTextSubtleStyle}"/>
                                         <TextBlock
                                             Grid.Column="3"
                                             Margin="5,0,0,0"
-                                            Text="∣"/>
+                                            Text="∣"
+                                            Style="{StaticResource PhoneTextSubtleStyle}"/>
                                         <TextBlock   
                                             Grid.Column="4"
                                             Margin="5,0,0,0"
                                             Text="{Binding BoilTime, StringFormat=' {0} min'}"
-                                            Padding="0,0,0,10" />                
+                                            Padding="0,0,0,10"
+                                            Style="{StaticResource PhoneTextSubtleStyle}"/>
                                     </Grid>   
 
                                     <toolkit:ContextMenuService.ContextMenu>
