--- a/BrewingApp/Views/PivotHops.xaml
+++ b/BrewingApp/Views/PivotHops.xaml
@@ -47,7 +47,7 @@
                 <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
                 <Setter Property="HorizontalAlignment" Value="Stretch"/>
             </Style>
-            
+
             <local:UnitExtensionConverter x:Key="UnitExtension"/>
             <local:VolumeConverter x:Key="VolumeConverter"/>
             <local:WeightConverter x:Key="WeightConverter"/>
@@ -85,11 +85,9 @@
 
                             <TextBlock 
                                 Text="{Binding ., Converter={StaticResource UnitExtension}, ConverterParameter='Volume', StringFormat='Batch Volume ({0})'}" 
-                                FontSize="{StaticResource PhoneFontSizeNormal}" 
-                                FontFamily="{StaticResource PhoneFontFamilyNormal}" 
                                 VerticalAlignment="Top" 
                                 LineHeight="31" 
-                                Foreground="{StaticResource PhoneSubtleBrush}" 
+                                Style="{StaticResource PhoneTextNormalStyle}"
                                 Margin="12,0,5,-5"/>
                             <TextBox 
             					HorizontalAlignment="Stretch" 
@@ -104,11 +102,9 @@
 
                             <TextBlock 
                                 Text="Specific Gravity" 
-                                FontSize="{StaticResource PhoneFontSizeNormal}" 
-                                FontFamily="{StaticResource PhoneFontFamilyNormal}" 
                                 VerticalAlignment="Top" 
                                 LineHeight="31" 
-                                Foreground="{StaticResource PhoneSubtleBrush}" 
+                                Style="{StaticResource PhoneTextNormalStyle}"
                                 Margin="12,0,12,-5"/>
                             <TextBox 
             					HorizontalAlignment="Stretch" 
@@ -172,33 +168,33 @@
                                             <TextBlock
                                                 Text="{Binding Amount, Converter={StaticResource WeightConverter}, StringFormat=' {0,2:f2}'}" 
                                                 Margin="10,0,5,0"
-                                                Style="{StaticResource PhoneTextSubtleStyle}"/>
+                                                Style="{StaticResource PhoneTextNormalStyle}"/>
                                             <TextBlock
                                                 Text="{Binding ., Converter={StaticResource UnitExtension}, ConverterParameter='Weight'}"
-                                                Style="{StaticResource PhoneTextSubtleStyle}"/>
+                                                Style="{StaticResource PhoneTextNormalStyle}"/>
                                         </StackPanel>
 
                                         <TextBlock
                                             Grid.Column="1"
                                             Margin="5,0,0,0"
                                             Text="∣"
-                                            Style="{StaticResource PhoneTextSubtleStyle}"/>
+                                            Style="{StaticResource PhoneTextNormalStyle}"/>
                                         <TextBlock
                                             Text="{Binding AlphaAcid, StringFormat=' {0:f1}%'}"
                                             Grid.Column="2"
                                             Margin="5,0,0,0"
-                                            Style="{StaticResource PhoneTextSubtleStyle}"/>
+                                            Style="{StaticResource PhoneTextNormalStyle}"/>
                                         <TextBlock
                                             Grid.Column="3"
                                             Margin="5,0,0,0"
                                             Text="∣"
-                                            Style="{StaticResource PhoneTextSubtleStyle}"/>
+                                            Style="{StaticResource PhoneTextNormalStyle}"/>
                                         <TextBlock   
                                             Grid.Column="4"
                                             Margin="5,0,0,0"
                                             Text="{Binding BoilTime, StringFormat=' {0} min'}"
                                             Padding="0,0,0,10"
-                                            Style="{StaticResource PhoneTextSubtleStyle}"/>
+                                            Style="{StaticResource PhoneTextNormalStyle}"/>
                                     </Grid>   
 
                                     <toolkit:ContextMenuService.ContextMenu>
@@ -249,8 +245,9 @@
                             Header="Hop varity" 
                             ItemsSource="{Binding HopVarities.Keys}"
                             SelectedItem="{Binding HopSelection2, Mode=TwoWay}"
-                            HorizontalAlignment="Stretch"/>
-
+                            HorizontalAlignment="Stretch"
+                            HeaderTemplate="{StaticResource ListPickerHeader}"/>
+                            
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition />
@@ -262,7 +259,7 @@
                                 <TextBlock 
                                     Text="Alpha Acid (%)"
                                     Padding="0,10,0,0" 
-                                    Style="{StaticResource PhoneTextSubtleStyle}" />
+                                    Style="{StaticResource PhoneTextNormalStyle}" />
 
                                 <toolkit:PhoneTextBox
                                     HorizontalAlignment="Stretch" 
@@ -296,8 +293,9 @@
                         Header="Hop varity" 
                         ItemsSource="{Binding HopVarities.Keys}"
                         SelectedItem="{Binding HopSelection1, Mode=TwoWay}"
-                        HorizontalAlignment="Stretch"/>
-
+                        HorizontalAlignment="Stretch"
+                        HeaderTemplate="{StaticResource ListPickerHeader}"/>
+                        
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition />
@@ -309,7 +307,7 @@
                                 <TextBlock 
                                     Text="Alpha Acid (%)"
                                     Padding="0,10,0,0" 
-                                    Style="{StaticResource PhoneTextSubtleStyle}" />
+                                    Style="{StaticResource PhoneTextNormalStyle}" />
 
                                 <toolkit:PhoneTextBox
                                     HorizontalAlignment="Stretch" 
@@ -323,7 +321,7 @@
                                 <TextBlock 
                                     Text="{Binding ., Converter={StaticResource UnitExtension}, ConverterParameter='Weight', StringFormat='Amount ({0})'}" 
                                     Padding="0,10,0,0" 
-                                    Style="{StaticResource PhoneTextSubtleStyle}" />
+                                    Style="{StaticResource PhoneTextNormalStyle}" />
 
                                 <toolkit:PhoneTextBox
                                     HorizontalAlignment="Stretch" 
