--- a/BrewingApp/Views/PivotMalts.xaml
+++ b/BrewingApp/Views/PivotMalts.xaml
@@ -59,7 +59,7 @@
                         <!-- VOLUMNE / EFFICIENCY -->
                         <Grid >
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="0.9*"/>
+                                <ColumnDefinition Width="0.85*"/>
                                 <ColumnDefinition Width="0.45*"/>
                                 <ColumnDefinition Width="1*"/>
                             </Grid.ColumnDefinitions>
@@ -70,17 +70,16 @@
 
                                 <TextBlock 
                                     Text="{Binding ., Converter={StaticResource UnitExtension}, ConverterParameter='Volume', StringFormat='Batch Volume ({0})'}" 
-                                    FontSize="{StaticResource PhoneFontSizeNormal}" 
-                                    FontFamily="{StaticResource PhoneFontFamilyNormal}" 
                                     VerticalAlignment="Top" 
                                     LineHeight="31" 
-                                    Foreground="{StaticResource PhoneSubtleBrush}" 
+                                    Style="{StaticResource PhoneTextNormalStyle}" 
                                     Margin="12,0,12,0"/>
                                 
                                 <TextBox 
             				        HorizontalAlignment="Stretch" 
             				        Text="{Binding BatchVolume, Mode=TwoWay, Converter={StaticResource VolumeConverter} }" 
-            				        InputScope="NumberFullWidth"/>
+            				        InputScope="NumberFullWidth"
+                                    />
                             </StackPanel>
 
                             <StackPanel 
@@ -88,11 +87,8 @@
             			        Grid.Column="1">
 
                                 <TextBlock Text="Efficiency" 
-                                    FontSize="{StaticResource PhoneFontSizeNormal}"
-                                    FontFamily="{StaticResource PhoneFontFamilyNormal}"
                                     VerticalAlignment="Top"
                                     LineHeight="31"
-                                    Foreground="{StaticResource PhoneSubtleBrush}"
                                     TextWrapping="Wrap" />
                                 <TextBox 
             				        HorizontalAlignment="Stretch" 
@@ -145,10 +141,10 @@
                                                 <TextBlock
                                                     Text="{Binding Amount, Converter={StaticResource WeightConverter},StringFormat=' {0:f2}'}" 
                                                     Margin="10,0,5,0"
-                                                    Style="{StaticResource PhoneTextSubtleStyle}"/>
+                                                    Style="{StaticResource PhoneTextNormalStyle}"/>
                                                 <TextBlock
                                                     Text="{Binding ., Converter={StaticResource UnitExtension}, ConverterParameter='Weight'}"
-                                                    Style="{StaticResource PhoneTextSubtleStyle}"/>
+                                                    Style="{StaticResource PhoneTextNormalStyle}"/>
                                             </StackPanel>
                                         </Grid>
 
@@ -206,7 +202,7 @@
                                     <TextBlock 
                                         Text="{Binding ., Converter={StaticResource UnitExtension}, ConverterParameter='Temperature', StringFormat='Target Mash Temperature ({0})'}" 
                                         Padding="0,10,0,0" 
-                                        Style="{StaticResource PhoneTextSubtleStyle}" />
+                                        Style="{StaticResource PhoneTextNormalStyle}" />
 
                                     <toolkit:PhoneTextBox
                                         HorizontalAlignment="Stretch" 
@@ -227,7 +223,7 @@
                                         FontSize="84"/>
                                     <TextBlock
                                         Text="@ boiling"
-                                        Style="{StaticResource PhoneTextSmallStyle}"
+                                        Style="{StaticResource PhoneTextNormalStyle}"
                                         HorizontalAlignment="Right"
                                         FontSize="16"
                                         />
@@ -265,7 +261,7 @@
                                     <TextBlock 
                                         Text="{Binding ., Converter={StaticResource UnitExtension}, ConverterParameter='Volume', StringFormat='Amount of Water ({0})'}" 
                                         Padding="0,10,0,0" 
-                                        Style="{StaticResource PhoneTextSubtleStyle}" />
+                                        Style="{StaticResource PhoneTextNormalStyle}" />
 
                                     <toolkit:PhoneTextBox
                                         HorizontalAlignment="Stretch" 
@@ -280,7 +276,7 @@
                                     <TextBlock 
                                         Text="{Binding ., Converter={StaticResource UnitExtension}, ConverterParameter='Temperature', StringFormat='Water Temperature ({0})'}" 
                                         Padding="0,10,0,0" 
-                                        Style="{StaticResource PhoneTextSubtleStyle}" />
+                                        Style="{StaticResource PhoneTextNormalStyle}" />
 
                                     <toolkit:PhoneTextBox
                                         HorizontalAlignment="Stretch" 
@@ -295,7 +291,7 @@
                                     <TextBlock 
                                         Text="{Binding ., Converter={StaticResource UnitExtension}, ConverterParameter='Weight', StringFormat='Amount of Grain ({0})'}" 
                                         Padding="0,10,0,0" 
-                                        Style="{StaticResource PhoneTextSubtleStyle}" />
+                                        Style="{StaticResource PhoneTextNormalStyle}" />
 
                                     <toolkit:PhoneTextBox
                                         HorizontalAlignment="Stretch" 
